Improved compilation config for 9+ java versions.